# tftn

./: .gitignore  CMakeLists.txt  README.md
data/android/: params.txt
data/apple/: params.txt
data/bunny/: params.txt
data/dragon/: params.txt
data/plant/: params.txt
data/torusknot/: params.txt
include/pcnml/: RIN.cpp  RIN.h
include/pcnml/IO/: LoadHPP.cpp  LoadHPP.h
include/pcnml/ThirdAlgorithm/: ThirdAlgorithm.cpp  ThirdAlgorithm.h
include/pcnml/utils/: est_result.h  utils.hpp  visualization.cpp  visualization.h
test/: example.cpp  test.cpp
